re PR c++/35144 (ICE in generate_element_copy)

PR c++/35144
	* tree-sra.c (sra_build_assignment): fold_convert SRC if copying
	non-compatible pointers.
	(generate_element_copy): If SRC and DST are RECORD_TYPEs with
	different FIELD_DECLs, try harder by comparing field offsets, sizes
	and types.

	* g++.dg/tree-ssa/pr35144.C: New test.

From-SVN: r132264